[gd_scene load_steps=19 format=3 uid="uid://br5j3kq1smj6l"]

[ext_resource type="Script" uid="uid://cnyqa83iddkda" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dy8dul25wtxai" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://4fvkb1gam2su" path="res://bullet.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://b2301auif72gf" path="res://big_asteroid.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://b5jn7jfr51rxp" path="res://medium_asteroid.tscn" id="4_lquwl"]
[ext_resource type="PackedScene" uid="uid://bhm2vffb6bhxp" path="res://small_asteroid.tscn" id="5_7mycd"]
[ext_resource type="PackedScene" uid="uid://b1cwp8irvat2k" path="res://start_screen.tscn" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://wnxcbkeq7gmy" path="res://game_hud.tscn" id="8_5vw27"]
[ext_resource type="PackedScene" uid="uid://bhiyetlh52pin" path="res://game_over_screen.tscn" id="9_kek77"]
[ext_resource type="AudioStream" uid="uid://c0ym8g230c6vt" path="res://Music/MenuMusic.mp3" id="10_4c57u"]
[ext_resource type="PackedScene" uid="uid://gka24ak7goix" path="res://high_scores.tscn" id="10_yaehf"]
[ext_resource type="AudioStream" uid="uid://c74ss5vbloyq4" path="res://Music/GameMusic.mp3" id="11_efxa6"]
[ext_resource type="AudioStream" uid="uid://c47vswxghkeqp" path="res://Music/GameOver.mp3" id="12_dg77c"]
[ext_resource type="AudioStream" uid="uid://i80cyunveil0" path="res://Music/PlayerMusic.mp3" id="12_vivmo"]
[ext_resource type="AudioStream" uid="uid://dagg8888xokt3" path="res://Music/AsteroidHit.mp3" id="13_ycdy4"]
[ext_resource type="AudioStream" uid="uid://wdm1lq66sep1" path="res://Music/Crash.mp3" id="14_w48qg"]
[ext_resource type="AudioStream" uid="uid://bi2jjox4cj3uf" path="res://Music/Shoot.mp3" id="16_2cqfq"]

[sub_resource type="Curve2D" id="Curve2D_h2yge"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
bullet_scene = ExtResource("2_h2yge")
big_asteroid_scene = ExtResource("4_1bvp3")
medium_asteroid_scene = ExtResource("4_lquwl")
small_asteroid_scene = ExtResource("5_7mycd")

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.033853274, 0.03385328, 0.033853255, 1)

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
visible = false
position = Vector2(32, 72)

[node name="AstroidPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_h2yge")

[node name="AsteroidPathLocation" type="PathFollow2D" parent="AstroidPath"]

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SlowDownTimer" type="Timer" parent="."]

[node name="StartScreen" parent="." instance=ExtResource("7_272bh")]

[node name="GameHud" parent="." instance=ExtResource("8_5vw27")]
visible = false

[node name="GameOverScreen" parent="." instance=ExtResource("9_kek77")]
visible = false

[node name="HighScores" parent="." instance=ExtResource("10_yaehf")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(640, 386)

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_4c57u")
autoplay = true

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_efxa6")

[node name="PlayerMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_vivmo")
volume_db = -20.0

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_dg77c")

[node name="AsteroidHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_ycdy4")
max_polyphony = 10

[node name="Crash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_w48qg")
max_polyphony = 2
parameters/looping = false

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_2cqfq")
max_polyphony = 5

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.019607844, 0.019607844, 0.019607844, 1)

[node name="PlayerBounds" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
freeze = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerBounds"]
build_mode = 1
polygon = PackedVector2Array(0, 0, 1280, 0, 1280, 720, 0, 720)

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="moving" from="Player" to="." method="_on_player_moving"]
[connection signal="off_screen" from="Player" to="." method="_on_player_off_screen"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_asteroid_timer_timeout"]
[connection signal="timeout" from="SlowDownTimer" to="." method="_on_slow_down_timer_timeout"]
[connection signal="high_scores_screen" from="StartScreen" to="." method="_on_start_screen_high_scores_screen"]
[connection signal="start_game" from="StartScreen" to="." method="_on_start_game"]
[connection signal="start_game" from="GameOverScreen" to="." method="_on_start_game"]
[connection signal="to_menu" from="GameOverScreen" to="." method="_on_game_over_screen_to_menu"]
[connection signal="high_score_back" from="HighScores" to="." method="_on_high_score_screen_high_score_back"]
[connection signal="high_score_submit" from="HighScores" to="." method="_on_high_scores_high_score_submit"]
